# tty_aiohttp

./: .gitignore  Dockerfile  Makefile  README.md  buildVendor.js  eslint.config.mjs  package.json  packages.txt  pyproject.toml  vite.config.js
.github/workflows/: release.yaml  test.yaml
frontend/: index.html
frontend/src/: App.vue  main.js  style.css  ws.js
tests/app/: conftest.py
tests/app/handlers/: test_ping.py  test_router.py  test_ws.py
tests/app/middlewares/: test_vue_router.py
tty_aiohttp/: __init__.py
tty_aiohttp/app/: __init__.py  __main__.py  arguments.py  middlewares.py
tty_aiohttp/app/handlers/: __init__.py  index.py  static.py
tty_aiohttp/app/handlers/v1/: ping.py
tty_aiohttp/app/handlers/ws/: __init__.py  env.py  pty.py
tty_aiohttp/app/services/: rest.py
tty_aiohttp/app/static/: App.js  index.html  loader.js  main.js
tty_aiohttp/app/static/api/: ws.js
tty_aiohttp/app/static/components/: SideMenu.vue
tty_aiohttp/app/static/views/: Home.vue
tty_aiohttp/app/templates/: index.html
tty_aiohttp/app/utils/: serializers.py
tty_aiohttp/utils/: argparse.py
tty_aiohttp/utils/http/: filters.py
