[tool.poetry]
name = "tty_aiohttp"
version = "0.0.1"
description = "TTY web application"
authors = ["Ivan Sitkin <falvinera@yandex.ru>"]
readme = "README.md"
packages = [
  {include = "tty_aiohttp"}
]
include = [
  "tty_aiohttp/version.py",
  "tty_aiohttp/admin/static",
  "tty_aiohttp/admin/template",
]

[tool.poetry.dependencies]
python = "^3.12.0"
aiomisc = {extras = ["aiohttp", "raven"], version = "^17.0"}
aiomisc-dependency = "~0.1.17"
ConfArgParse = "^1.1.20"
fast-json = "^0.3.2"
forklib = "~0.5.0"
setproctitle = "^1.3"
pytz = "^2025"
pydantic = "^2.10.6"
wsrpc-aiohttp = "^3.2.0"
aiofile = "^3.9.0"

[tool.poetry.group.test.dependencies]
aiomisc-pytest = "^1.1.1"
pytest = "^8.2"
pytest-cov = "^5.0.0"
coveralls = "^3.3.1"
mypy = "~1.15.0"
gray = "^0.15.0"
ruff = "0.9.8"

[tool.poetry.scripts]
tty_aiohttp = "tty_aiohttp.app.__main__:main"

[tool.mypy]
allow_subclassing_any = true
allow_untyped_calls = true
allow_untyped_decorators = true
ignore_missing_imports = true
implicit_reexport = true
pretty = true
show_error_codes = true
strict = true
warn_return_any = false

[tool.pytest.ini_options]
python_files = "test_*"
python_functions = "test_*"
python_classes = "TestSuite*"
addopts = "-p no:cacheprovider"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["tty_aiohttp"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80
target-version = "py311"
select = [
  "BLE",
  "C90",
  "E",
  "F",
  "G",
  "I",
  "ICN",
  "ISC",
  "PLE",
  "Q",
  "RUF006",
  "RUF100",
  "T10",
  "T20",
  "TID",
  "UP",
  "W",
]
ignore = ["E712", "UP007"]
flake8-quotes = { inline-quotes = "double", multiline-quotes = "double" }
