[project]
name = "tty_aiohttp"
version = "0.1.0"
description = "TTY web application"
authors = [
  {name = "Ivan Sitkin", email = "alvinera@yandex.ru"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiomisc[aiohttp,raven]>=17.7,<18",
  "aiomisc-dependency~=0.1.17",
  "ConfArgParse>=1.1.20,<2",
  "fast-json>=0.3.2,<0.4",
  "forklib~=0.5.0",
  "setproctitle>=1.3,<2",
  "pytz>=2025",
  "pydantic>=2.10.6,<3",
  "wsrpc-aiohttp>=4.0.3,<5",
  "aiofile>=3.9.0,<4",
  "configargparse>=1.7,<2",
]

[dependency-groups]
dev = [
  "aiomisc-pytest>=1.1.1,<2",
  "pytest>=8.2,<9",
  "pytest-cov>=5.0.0,<6",
  "coveralls>=3.3.1,<4",
  "mypy~=1.15.0",
  "gray>=0.15.0,<0.16",
  "ruff>=0.9.9,<0.10",
]

[project.scripts]
tty_aiohttp = "tty_aiohttp.app.__main__:main"

[tool.mypy]
allow_subclassing_any = true
allow_untyped_calls = true
allow_untyped_decorators = true
ignore_missing_imports = true
implicit_reexport = true
pretty = true
show_error_codes = true
strict = true
warn_return_any = false

[tool.pytest.ini_options]
python_files = "test_*"
python_functions = "test_*"
python_classes = "TestSuite*"
addopts = "-p no:cacheprovider"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["tty_aiohttp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 80
target-version = "py311"
lint.select = [
  "BLE",
  "C90",
  "E",
  "F",
  "G",
  "I",
  "ICN",
  "ISC",
  "PLE",
  "Q",
  "RUF006",
  "RUF100",
  "T10",
  "T20",
  "TID",
  "UP",
  "W",
]
lint.ignore = ["E712", "UP007"]
lint.flake8-quotes = { inline-quotes = "double", multiline-quotes = "double" }
